--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/jhandzel130696/Learning-git-2/issues"
   },
-  "homepage": "https://github.com/jhandzel130696/Learning-git-2#readme"
+  "homepage": "https://github.com/jhandzel130696/Learning-git-2#readme",
+  "devDependencies": {
+    "browser-sync": "^2.26.14",
+    "html-validate": "^4.6.1"
+  }
 }
